# Deform2D

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Deform2D.cpp  Deform2D.sln  Deform2D.vcproj  Deform2D.vcxproj  Deform2D.vcxproj.filters  README.md  ReadMe.txt  stdafx.cpp  stdafx.h
app/: App.cpp  (+6 more)
third/Wml/: CMakeLists.txt
third/Wml/Include/: WmlOpenGLCamera.h  WmlOpenGLRenderer.h  WmlRendererLibType.h  WmlWglRenderer.h
third/Wml/Source/: WildMagic2.dsp  WildMagic2.vcproj  WildMagic2.vcxproj  WildMagic2.vcxproj.filters
third/Wml/Source/Approximation/: WmlApprCircleFit2.cpp  WmlApprCylinderFit3.cpp  WmlApprEllipsoidFit3.cpp  WmlApprGaussPointsFit2.cpp  WmlApprGaussPointsFit3.cpp  WmlApprLineFit2.cpp  WmlApprLineFit3.cpp  WmlApprPlaneFit3.cpp  WmlApprPolyFit2.cpp  WmlApprQuadraticFit2.cpp
third/Wml/Source/Containment/: WmlContBox3.cpp  WmlContCapsule3.cpp  WmlContCylinder3.cpp  WmlContEllipse2.cpp  WmlContMinBox2.cpp  WmlContMinBox3.cpp  WmlContMinCircle2.cpp  WmlContMinEllipseCR2.cpp  WmlContPointInPolygon2.cpp  WmlContSeparatePoints2.cpp  WmlContSeparatePoints3.cpp
third/Wml/Source/Curves/: WmlBSplineCurve2.cpp  WmlBSplineCurve3.cpp  WmlBezierCurve2.cpp  WmlCubicPolynomialCurve3.cpp  WmlCurve3.cpp  WmlMultipleCurve3.cpp  WmlNURBSCurve2.cpp  WmlNURBSCurve3.cpp  WmlPolynomialCurve2.cpp  WmlSingleCurve3.cpp  WmlTCBSpline3.cpp
third/Wml/Source/Distance/: WmlDistLin3Box3.cpp  WmlDistLin3Cir3.cpp  WmlDistLin3Lin3.cpp  WmlDistTri3Rct3.cpp  WmlDistVec2Qdr2.cpp  WmlDistVec3Cir3.cpp  WmlDistVec3Eld3.cpp  WmlDistVec3Fru3.cpp  WmlDistVec3Lin3.cpp  WmlDistVec3Pln3.cpp  WmlDistVec3Rct3.cpp
third/Wml/Source/Geometry/: WmlAxisAlignedBox2.cpp  WmlAxisAlignedBox3.cpp  WmlCapsule3.cpp  WmlCone3.cpp  WmlConvexClipper.cpp  WmlConvexPolygon2.cpp  WmlConvexPolyhedron3.cpp  WmlCylinder3.cpp  WmlDisk3.cpp  WmlFrustum3.cpp  WmlLozenge3.cpp  WmlPlane3.cpp  WmlRectangle3.cpp  WmlSegment2.cpp  WmlSegment3.cpp  WmlTetrahedron3.cpp
third/Wml/Source/Graphics/: WmlBezierCylinder2.cpp  WmlBezierMesh.cpp  WmlBezierPatch.cpp  WmlBezierRectangle.cpp  WmlBezierRectangle3.cpp  WmlBezierTriangle.cpp  WmlBezierTriangle3.cpp  WmlBoundingVolumeTree.cpp  WmlBoxBV.cpp  WmlBumpMap.cpp  WmlCapsuleBV.cpp  WmlClodMesh.cpp  WmlCollapseRecord.cpp  WmlCollisionRecord.cpp  WmlController.cpp  WmlConvexRegionManager.cpp  WmlCullState.cpp  WmlGeometry.cpp  WmlGlossMap.cpp  WmlIKGoal.cpp  WmlImage.cpp  WmlKeyframeController.cpp  WmlLight.cpp  WmlLightNode.cpp  WmlMaterialState.cpp  WmlMorphController.cpp  WmlObject.cpp  WmlParticles.cpp  WmlPlanarReflection.cpp  WmlPlanarShadow.cpp  WmlPointLight.cpp  WmlPolyline.cpp  WmlPortal.cpp  WmlShadeState.cpp  WmlShader.cpp  WmlShaderConst.cpp  WmlSpatial.cpp  WmlSpotLight.cpp  WmlStateConstant.cpp  WmlStringTree.cpp  (+4 more)
third/Wml/Source/ImageAnalysis/: WmlBinary2D.cpp  WmlBinary3D.cpp  WmlExtractSurfaceTetra.cpp  WmlFastBlur.cpp  WmlImages.cpp  WmlLattice.cpp
third/Wml/Source/Interpolation/: WmlIntpAkimaUniform1.cpp  WmlIntpAkimaUniform3.cpp  WmlIntpBSplineUniform1.cpp  WmlIntpBSplineUniform3.cpp  WmlIntpBicubic2.cpp  WmlIntpBilinear2.cpp  WmlIntpSphere2.cpp  WmlIntpThinPlateSpline2.cpp  WmlIntpThinPlateSpline3.cpp  WmlIntpTricubic3.cpp
third/Wml/Source/Intersection/: WmlIntrBox2Box2.cpp  WmlIntrElp2Elp2.cpp  WmlIntrHsp3Lin3.cpp  WmlIntrHsp3Sph3.cpp  WmlIntrHsp3Tri3.cpp  WmlIntrLin2Box2.cpp  WmlIntrLin3Box3.cpp  WmlIntrLin3Cap3.cpp  WmlIntrLin3Con3.cpp  WmlIntrLin3Cyl3.cpp  WmlIntrLin3Eld3.cpp  WmlIntrLin3Loz3.cpp  WmlIntrLin3Tor3.cpp  WmlIntrLoz3Loz3.cpp  WmlIntrPln3Cyl3.cpp  WmlIntrPln3Eld3.cpp  WmlIntrTet3Tet3.cpp  WmlIntrTri3Sph3.cpp  WmlIntrTri3Tri3.cpp  WmlIntrUtilityBox3.cpp  WmlIntrUtilityLin3.cpp  WmlIntrUtilityTri3.cpp
third/Wml/Source/Math/: WmlBandedMatrix.cpp  WmlGVector.cpp  WmlMath.cpp  WmlMatrix2.cpp  WmlMatrix3.cpp  WmlMatrix4.cpp  WmlPoint2.cpp  WmlPoint4.cpp  WmlPolynomial1.cpp  WmlQuaternion.cpp  WmlVector3.cpp  WmlVector4.cpp
third/Wml/Source/Meshes/: WmlConformalMap.cpp  WmlETManifoldMesh.cpp  WmlETNonmanifoldMesh.cpp  WmlMeshCurvature.cpp  WmlMeshSmoother.cpp  WmlVEMesh.cpp  WmlVETMesh.cpp
third/Wml/Source/Miscellaneous/: WmlQuadToQuadTransforms.cpp  WmlRandomHypersphere.cpp
(+210 files in other folders)
